fixed the overflow-y css issue, which made it fail validation, but ADDS a horrible horizontal scrollbar when I Dont need one
git-svn-id: https://solarcell.svn.sourceforge.net/svnroot/solarcell/trunk@20 5ef690da-be1e-0410-b0b2-f09f64f3856a

--- a/www/solarcell.css
+++ b/www/solarcell.css
@@ -147,7 +147,7 @@ img{ border: 0; }
 .newsBody{
 	height: 35em;
 	font-size: small;
-	overflow-y: scroll;
+	overflow: scroll;
 }
 .newsItem{
 	margin-bottom: 10px;
